Fix broken code and restore contrast of dark entry

--- a/light/gtk-3.0/_drawing.scss
+++ b/light/gtk-3.0/_drawing.scss
@@ -21,7 +21,8 @@
 // entries
 
 @function entry_focus_border($fc:$selected_bg_color) {
-  @return $fc;
+  @if $variant == 'light' { @return $fc; }
+  @else { @return if($fc==$selected_bg_color, $selected_borders_color, darken($fc, 35%)); }
 }
 
 @function entry_focus_shadow($fc:$selected_bg_color) {
